--- a/.gitignore
+++ b/.gitignore
@@ -185,3 +185,8 @@ fabric.properties
 
 # idea folder, uncomment if you don't need it
 # .idea
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/Python_Study.iml
+.idea/vcs.xml
